<resources>
    <string name="app_name">Movie and TV Show App</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>
    <string name="title_detail_movie">Detail Movie</string>
    <string name="title_detail_tv_show">Detail TV Show</string>
    <string name="change_language_setting">Change Language Setting</string>

    <string name="lorem__long_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem__short_sample">Lorem ipsum dolor sit amet </string>
    <string name="percentage__sample">84%</string>
    <string name="date__sample">10/10/2010</string>

    <string name="calendar_content_description">Calendar Image</string>
    <string name="poster_content_description">Poster Image</string>
    <string name="movie_image_description">Movie image</string>
    <string name="tv_show_image_description">TV Show image</string>

    <string name="loading_text">Loading</string>
    <string name="add_favorite">favorite</string>
    <string name="title_favorite_movie">Favorite Movie</string>
    <string name="title_favorite_tv_show">Favorite TV Show</string>
</resources>
