<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_detail_movie"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_image_height"
            android:contentDescription="@string/poster_content_description"
            android:foregroundGravity="center"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/poster_sample" />

        <TextView
            android:id="@+id/text_detail_rating_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#4D000000"
            android:drawableStart="@drawable/starsmall"
            android:drawablePadding="4dp"
            android:elevation="2dp"
            android:padding="8dp"
            android:text="@string/percentage__sample"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/image_detail_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.059"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_detail_movie"
            app:layout_constraintVertical_bias="0.926" />

        <TextView
            android:id="@+id/text_detail_title_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:text="@string/lorem__short_sample"
            android:textColor="@android:color/black"
            android:textSize="@dimen/activity_title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_detail_movie" />

        <ImageView
            android:id="@+id/imageView"
            android:contentDescription="@string/calendar_content_description"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/calendar"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_detail_title_movie" />

        <TextView
            android:id="@+id/text_detail_calendar_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/date__sample"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/text_detail_title_movie" />

        <TextView
            android:id="@+id/text_detail_description_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/lorem__long_sample"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_detail_calendar_movie" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>
